# pomodoro-desktop-app

./: main.py  pyproject.toml
