[tool.poetry]
name = "Pomodoro"
version = "0.1.0"
description = "Application for productivity"
authors = ["Ariel Mesquita <arielmesquita@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
