[tool.poetry]
name = "Pomodoro"
version = "0.1.0"
description = "Application for productivity"
authors = ["Ariel Mesquita <arielmesquita@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
pep8 = "^1.7.1"
flake8 = "^5.0.4"
mypy = "^0.982"
pylint = "^2.15.3"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
